Use custom theme as default

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
     %sveltekit.head%
   </head>
 
-  <body class="light-theme">
+  <body class="custom-theme">
     <svelte-app style="display: contents">%sveltekit.body%</svelte-app>
   </body>
 </html>
